# CitizenVerify

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker-push-dev-image.yml  docker-push-pr-image.yml  docker-push-prod-image.yml  verify_commit.yml
AstralAdmin/: main.py
AstralAdmin/logs/: astralAdmin.log.1  astralAdmin.log.2  astralAdmin.log.3
AstralAdmin/src/: __init__.py  astral_admin.py
AstralAdmin/src/cogs/: __init__.py  background_tasks.py  slash_commands.py
AstralAdmin/src/logic/: __init__.py  firebase_db.py  firebase_db_connection.py  rsi_lookup.py  slash_commands.py  slash_logic.py  update_user_roles.py
AstralAdmin/tests/: __init__.py
CitizenVerify/: pyproject.toml
src/: __init__.py  astral_admin.py
src/cogs/: __init__.py  slash_commands.py
tests/: __init__.py
