[tool.poetry]
name = "citizenverify"
version = "0.1.0"
description = ""
authors = ["David Symons <davidsymons.w@gmail.com>"]
readme = "README.md"
packages = [{include = "citizenverify", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
